--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,11 @@ input{
 
 label{
     font-size: large;
+    padding: 5px;
+}
+
+textarea {
+    resize: none;
 }
 #header{
     font-size: 30px;
@@ -112,6 +117,10 @@ label{
     cursor: pointer; /* Change cursor to pointer when hovering over the button */
 }
 
-.name{
+#name{
     margin: 3px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
