--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,6 @@ body{
     margin: 0;
     background-color: #62A8AC;
 }
-
 input{
     width: 200px;
     height: 25px;
@@ -45,11 +44,19 @@ textarea {
 
 #names-list{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    padding: 2px;
+    list-style-type: none; /* Remove default bullet points */
+    padding: 0; /* Remove default padding */ 
 }
+
+.name-card-col{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start; /* Align items to the start/top of the container */
+}
+
 
 #names-print{
     display: flex;
@@ -98,11 +105,11 @@ textarea {
     padding: 5px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-between;
     width: 100px;
+    min-height: 50px;
     margin: 3px;
     border-bottom: 1px solid #FAFAD2;
-    font-size: 20px;
 }
 
 .delete-button {
