--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,12 +77,21 @@ textarea {
     align-items: center;
     justify-content: flex-start; /* Aligns items at the top */
     width: 100px;
-    min-height: 150px;
+    min-height: 50px;
     margin: 3px;
     border-bottom: 1px solid #FAFAD2;
 }
 
 #groups-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    margin: 5px ;
+}
+
+.group-row{
     display: flex;
     flex-direction: row;
     align-items: center;
