changed background color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@ body{
     height: 100vh; /* Full viewport height */
     color: white;
     margin: 0;
-    background-color: #62A8AC;
+    background-color: #6E0E15;
 }
 
 a {
